typescript/checker/tests/conformance/es6/templates/templateStringUnterminated5_ES6.ts.stderr
error: Unterminated template
 --> $DIR/tests/conformance/es6/templates/templateStringUnterminated5_ES6.ts:2:1
  |
2 | `\\\\\`
  | ^^^^^^^

